cncProd/force-app/main/default/objects/Referral__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>CASE(TEXT(Brand_Picklist__c), &quot;MIT&quot;, &quot;Mitsubishi&quot;, &quot;CIT&quot;, &quot;Citroën&quot;,&quot;DS&quot;,&quot;DS&quot;, &quot;KIA&quot;, &quot;Kia&quot;, &quot;MB&quot;, &quot;Mercedes-Benz&quot;,&quot;&quot;)</formula>
    <label>Brand</label>
    <type>Text</type>
</CustomField>