cncProd/force-app/main/default/objects/Referral__c/fields/Brand_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Brand_Picklist__c</fullName>
    <inlineHelpText>This value is coming from APP (API post)</inlineHelpText>
    <label>Brand Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIT</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>CIT</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>