cncProd/force-app/main/default/objects/Referral__c/fields/Number_of_Days_before_expired__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_before_expired__c</fullName>
    <formula>Expiry_Referred_Date__c -  today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days before expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>