cncProd/force-app/main/default/objects/Referral__c/fields/PDPA__c.field-meta.xml
<CustomField>
    <fullName>PDPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDPA</label>
    <type>Checkbox</type>
</CustomField>