cncProd/force-app/main/default/objects/Referral__c/fields/Preferred_SC_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Preferred_SC_Oppty__c</fullName>
    <formula>Opportunity__r.Owner.LastName +&apos; &apos; + Opportunity__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred SC Oppty</label>
    <type>Text</type>
</CustomField>