cncProd/force-app/main/default/objects/Referral__c/fields/Referee__c.field-meta.xml
<CustomField>
    <fullName>Referee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First Name, Last Name, Mobile number and Email to create Lead</description>
    <label>Referee</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>