cncProd/force-app/main/default/objects/Referral__c/fields/Referee_Account__c.field-meta.xml
<CustomField>
    <fullName>Referee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referee Account (Prospect)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referee Account)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>