cncProd/force-app/main/default/objects/Referral__c/fields/Referee_Sales_Agreement_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Referee_Sales_Agreement_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referee Sales Agreement (Prospect)</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>