cncProd/force-app/main/default/objects/Referral__c/fields/Referree__c.field-meta.xml
<CustomField>
    <fullName>Referree__c</fullName>
    <label>Referee First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>