cncProd/force-app/main/default/objects/Referral__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referrer reference</description>
    <label>Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Referrer)</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>