cncProd/force-app/main/default/objects/Referral__c/fields/Referrer_Account__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referrer</description>
    <label>Referrer Account (Customer)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Account Referrer)</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>