cncProd/force-app/main/default/objects/Referral__c/recordTypes/Referral_CNC_app.recordType-meta.xml
<RecordType>
    <fullName>Referral_CNC_app</fullName>
    <active>true</active>
    <description>Referral - C&amp;C app</description>
    <label>Referral - C&amp;C app</label>
</RecordType>